--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ resources:
 variables:
   tag: '$(Build.BuildId)'
   imageName: 'pomotr:$(build.buildNumber)'
+  buildConfiguration: 'Release'
 
 stages:
 - stage: Build
@@ -23,14 +24,13 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'    
     steps:
-    - task: DotNetCoreCLI@2
-      displayName: 'Restore'
+    - task: UseDotNet@2 
+      displayName: ".NET Core 3.1.x"
       inputs:
-        command: 'restore'
-    - task: DotNetCoreCLI@2
-      displayName: 'Build'
-      inputs:
-        command: 'build'  
+        version: '3.1.x'
+        packageType: sdk
+    - script: dotnet build --configuration $(buildConfiguration)
+      displayName: 'dotnet build $(buildConfiguration)'
     - task: WhiteSource Bolt@19
       displayName: 'Run WhiteSource Bolt'      
     - task: Docker@2
