Test building the artifact

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,18 @@ stages:
     - script: dotnet build --configuration $(buildConfiguration)
       displayName: 'dotnet build $(buildConfiguration)'
     - task: WhiteSource Bolt@19
-      displayName: 'Run WhiteSource Bolt'      
+      displayName: 'Run WhiteSource Bolt'
+    - task: DotNetCoreCLI@2
+      displayName: 'Publish the project - Release'
+      inputs:
+        command: 'publish'
+        projects: 'PomotrApp/*.csproj'
+        publishWebProjects: false
+        arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+        zipAfterPublish: true
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish Artifact: drop'
+      condition: succeeded()        
     - task: Docker@2
       displayName: Build an image
       inputs:
