--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,4 +59,23 @@ stages:
         summaryFileLocation: '$(System.DefaultWorkingDirectory)/test-results/coverage/coverage.xml'
         reportDirectory: '$(System.DefaultWorkingDirectory)/test-results/coverage/reports'
       displayName: 'Publish coverage reports'
-
+- stage: 'Deploy'
+  displayName: 'Deploy to DEV environment'
+  dependsOn: Build
+  jobs:
+  - deployment: Deploy
+    pool:
+      vmImage: 'ubuntu-latest'
+    environment: dev
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+            - download: current
+              artifact: drop
+            - task: AzureWebApp@1
+              displayName: 'Azure App Service Deploy: website'
+              inputs:
+                azureSubscription: 'Resource Manager - Pomotr'
+                appName: 'PomotrApp'
+                package: '**/PomotrApp.zip'        
