--- a/PomotrApp/ClientApp/package.json
+++ b/PomotrApp/ClientApp/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.8.2",
-    "@material-ui/icons": "^4.5.1",
-    "babel-eslint": "10.0.1",
-    "bootstrap": "^4.1.3",
+    "@material-ui/core": "4.8.3",
+    "@material-ui/icons": "4.5.1",
+    "babel-eslint": "10.0.3",
     "jquery": "^3.4.1",
     "material-table": "^1.54.2",
     "merge": "^1.2.1",
@@ -17,7 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
     "reactstrap": "^6.3.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "3.0.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
