--- a/PomotrApp/ClientApp/package.json
+++ b/PomotrApp/ClientApp/package.json
@@ -3,25 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.8.3",
-    "@material-ui/icons": "4.5.1",
-    "babel-eslint": "10.0.3",
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
     "jquery": "^3.4.1",
     "material-table": "^1.54.2",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
-    "reactstrap": "^6.3.0",
     "rimraf": "3.0.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.12.0",
+    "eslint": "^6.6.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-flowtype": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
