--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,4 +84,4 @@ stages:
               inputs:
                 azureSubscription: 'sc-pomotr-dev'
                 appName: 'pomotr-dev'
-                package: '**/PomotrApp.zip'        
+                package: '$(System.DefaultWorkingDirectory)/**/PomotrApp.zip'        
