Docker compose + SQL Server

--- a/PomotrApp/appsettings.json
+++ b/PomotrApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=localhost,1444;Database=Data;User Id=sa;Password=ReallyStringDevPassword#007;"
   },
   "Logging": {
       "LogLevel": {
