--- a/PomotrApp/appsettings.json
+++ b/PomotrApp/appsettings.json
@@ -14,6 +14,9 @@
       "PomotrApp": {
         "Profile": "IdentityServerSPA"
       }
+    },
+    "Key": {
+      "Type": "Development"
     }
   },
 "AllowedHosts": "*"
