--- a/PomotrApp/PomotrApp.csproj
+++ b/PomotrApp/PomotrApp.csproj
@@ -32,7 +32,7 @@
     <Content Remove="$(SpaRoot)**" />
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
-    <Content Include="obj\tempkey.json" />
+    <None Include="obj\tempkey.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
