--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,6 +76,25 @@ stages:
     - script: dotnet test --results-directory ./test-results --logger "trx;LogFileName=test-results.xml" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../test-results/coverage.xml ./PomotrApp.Tests/PomotrApp.Tests.csproj
       displayName: 'Run unit tests'
 
+    # Publish test results
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'VSTest'
+        testResultsFiles: '**/test*.xml'
+        searchFolder: '$(System.DefaultWorkingDirectory)/test-results'
+        publishRunAttachments: true
+      displayName: 'Publish test results'
+      
+    # Publish test coverage
+    - task: PublishCodeCoverageResults@1
+      displayName: 'Publish coverage reports'
+      inputs:
+        codeCoverageTool: 'cobertura'
+        summaryFileLocation: '$(System.DefaultWorkingDirectory)/test-results/coverage.xml'
+        pathToSources: '$(System.DefaultWorkingDirectory)/PomotrApp'
+        reportDirectory: '$(System.DefaultWorkingDirectory)/test-results/'
+        failIfCoverageEmpty: true
+
     # Run SonarCloud analyze
     - task: UseDotNet@2 
       displayName: ".NET Core 2.x"
@@ -88,22 +107,6 @@ stages:
       inputs:
         pollingTimeoutSec: '300'
 
-    # Publish test results
-    - task: PublishTestResults@2
-      inputs:
-        testResultsFormat: 'VSTest'
-        testResultsFiles: '**/test*.xml'
-        searchFolder: '$(System.DefaultWorkingDirectory)/test-results'
-        publishRunAttachments: true
-      displayName: 'Publish test results'
-      
-    # Publish test coverage
-    - task: PublishCodeCoverageResults@1
-      inputs:
-        codeCoverageTool: 'cobertura'
-        summaryFileLocation: '$(System.DefaultWorkingDirectory)/test-results/coverage/coverage.xml'
-      displayName: 'Publish coverage reports'
-      
     # Publish package (zip)
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: drop
