--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,8 +73,11 @@ stages:
         zipAfterPublish: true
         
     # Unit tests
-    - script: dotnet test --results-directory ./test-results --logger "trx;LogFileName=test-results.xml" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../test-results/coverage.xml ./PomotrApp.Tests/PomotrApp.Tests.csproj
+    - script: dotnet test --results-directory ./test-results --logger "trx;LogFileName=test-results.xml" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=$(System.DefaultWorkingDirectory)/test-results/coverage.xml ./PomotrApp.Tests/PomotrApp.Tests.csproj
       displayName: 'Run unit tests'
+
+    - script: ls $(System.DefaultWorkingDirectory)/test-results/
+      displayName: 'List files in test-results folder'
 
     # Publish test results
     - task: PublishTestResults@2
