--- a/PomotrApp/ClientApp/package.json
+++ b/PomotrApp/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@axa-fr/react-oidc-context": "^3.0.9-alpha.0",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "jquery": "^3.4.1",
