--- a/PomotrApp/ClientApp/package.json
+++ b/PomotrApp/ClientApp/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@axa-fr/react-oidc-context": "^3.0.9-alpha.0",
-    "@material-ui/core": "^4.8.3",
-    "@material-ui/icons": "^4.5.1",
+    "@axa-fr/react-oidc-context": "3.0.9-alpha.0",
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
     "jquery": "^3.4.1",
-    "material-table": "^1.54.2",
+    "material-table": "1.57.2",
     "merge": "^1.2.1",
-    "oidc-client": "^1.9.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.0.1",
-    "rimraf": "3.0.0"
+    "oidc-client": "1.9.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.4.1",
+    "rimraf": "3.0.2"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
     "eslint": "^6.6.0",
-    "eslint-config-react-app": "^4.0.1",
+    "eslint-config-react-app": "5.2.1",
     "eslint-plugin-flowtype": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
