--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,8 +73,14 @@ stages:
         zipAfterPublish: true
         
     # Unit tests
-    - script: dotnet test  --collect:"Code Coverage" --results-directory $(System.DefaultWorkingDirectory)/test-results/ --logger "trx;LogFileName=test-results.xml" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=$(System.DefaultWorkingDirectory)/test-results/test-results-coverage.xml ./PomotrApp.Tests/PomotrApp.Tests.csproj
-      displayName: 'Run unit tests'
+    #- script: dotnet test  --collect:"Code Coverage" --results-directory $(System.DefaultWorkingDirectory)/test-results/ --logger "trx;LogFileName=test-results.xml" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=$(System.DefaultWorkingDirectory)/test-results/test-results-coverage.xml ./PomotrApp.Tests/PomotrApp.Tests.csproj
+    #  displayName: 'Run unit tests'
+
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'test'
+        arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
+        testRunTitle: 'dotnet test'
 
     - script: ls $(System.DefaultWorkingDirectory)/test-results/
       displayName: 'List files in test-results folder'
@@ -85,7 +91,7 @@ stages:
     - task: PublishTestResults@2
       inputs:
         testResultsFormat: 'VSTest'
-        testResultsFiles: '**/test-results.xml'
+        testResultsFiles: '**/*.xml'
         searchFolder: '$(System.DefaultWorkingDirectory)/test-results'
         publishRunAttachments: true
       displayName: 'Publish test results'
@@ -99,7 +105,7 @@ stages:
         #summaryFileLocation: '$(System.DefaultWorkingDirectory)/test-results/coverage.xml'
         #pathToSources: '$(System.DefaultWorkingDirectory)/PomotrApp'
         #reportDirectory: '$(System.DefaultWorkingDirectory)/test-results/'
-        failIfCoverageEmpty: true
+        failIfCoverageEmpty: false
 
     # Run SonarCloud analyze
     - task: UseDotNet@2 
