--- a/PomotrApp/ClientApp/package.json
+++ b/PomotrApp/ClientApp/package.json
@@ -18,13 +18,16 @@
   },
   "devDependencies": {
     "ajv": "^6.9.1",
+    "babel-eslint": "^10.1.0",
     "cross-env": "^5.2.0",
     "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-react-app": "5.2.1",
     "eslint-plugin-flowtype": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "typescript": "^3.5.2"
   },
   "eslintConfig": {
