--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,8 +79,8 @@ stages:
     - task: DotNetCoreCLI@2
       inputs:
         command: 'test'
-        arguments: '--configuration $(BuildConfiguration) --results-directory $(System.DefaultWorkingDirectory)/test-results/ /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx ./PomotrApp.Tests/PomotrApp.Tests.csproj'
-        testRunTitle: 'dotnet test'
+        projects: 'PomotrApp.Tests/PomotrApp.Tests.csproj'
+        arguments: '--configuration $(BuildConfiguration) --results-directory $(System.DefaultWorkingDirectory)/test-results/ /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
 
     - script: ls $(System.DefaultWorkingDirectory)/test-results/
       displayName: 'List files in test-results folder'
