--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,7 @@ stages:
       inputs:
         command: 'test'
         projects: 'PomotrApp.Tests/*.Tests.csproj'
-        arguments: '--configuration $(BuildConfiguration) --results-directory $(System.DefaultWorkingDirectory)/test-results/ /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
+        arguments: '--collect:"Code Coverage" --configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
         nobuild: true
 
     - script: ls $(System.DefaultWorkingDirectory)/test-results/
